# nasmon

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: aggregator.py  config.py  main.py  models.py
backend/app/collectors/: disks.py  fans.py  network.py  services.py  system.py
backend/app/truenas/: client.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ConnectionStatus.tsx  ProcessTable.tsx  ServiceDrawer.tsx  ServicesCard.tsx  StatusBadge.tsx  TempGauge.tsx
frontend/src/components/cards/: CpuCard.tsx  DiskCard.tsx  FanCard.tsx  NetworkCard.tsx  PoolCard.tsx  RamCard.tsx
frontend/src/hooks/: useDashboard.ts
frontend/src/types/: dashboard.ts
