[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nasmon"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psutil>=6.0",
    "websockets>=13.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiohttp>=3.9",
    "docker>=7.0",
]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["psutil.*", "docker.*"]
ignore_missing_imports = true
